[gd_scene load_steps=9 format=3 uid="uid://bvyop3wo3tmu8"]

[ext_resource type="Texture2D" uid="uid://cxjytmrepr521" path="res://lib/ui/card_bar/card_icon/textures/card_icon_base.png" id="1_ol776"]
[ext_resource type="Script" uid="uid://ca6gyc0l6bky3" path="res://lib/ui/card_bar/card_icon/card_icon.gd" id="2_ejva6"]
[ext_resource type="Texture2D" uid="uid://bt34t41f2eljb" path="res://lib/ui/card_bar/card_icon/textures/card_icon_use.png" id="3_1vyve"]
[ext_resource type="Texture2D" uid="uid://bcnh28pg5stny" path="res://lib/ui/card_bar/card_icon/textures/card_icon_mask.png" id="3_chdha"]
[ext_resource type="Texture2D" uid="uid://b5blg8sswcuvk" path="res://lib/ui/card_bar/card_icon/textures/card_icon_hover.png" id="3_s5lkj"]
[ext_resource type="Texture2D" uid="uid://s7x4w4xtu0sv" path="res://lib/ui/card_bar/card_icon/icons/unknown.png" id="5_s5lkj"]
[ext_resource type="Script" uid="uid://bgltvt34r5x0i" path="res://lib/ui/dissolve_control/dissolve_control.gd" id="6_84ogj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ejva6"]
texture = ExtResource("1_ol776")

[node name="CardIcon" type="Panel"]
custom_minimum_size = Vector2(64, 64)
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_ejva6")
script = ExtResource("2_ejva6")

[node name="Use" type="TextureRect" parent="."]
z_index = -1
custom_minimum_size = Vector2(94, 94)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_1vyve")
expand_mode = 1
script = ExtResource("6_84ogj")

[node name="Hover" type="TextureRect" parent="."]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_s5lkj")
expand_mode = 1

[node name="Mask" type="TextureRect" parent="."]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_chdha")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="Mask"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_s5lkj")
expand_mode = 1

[node name="CDBar" type="ColorRect" parent="Mask"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_top = 7.0
offset_right = 27.0
offset_bottom = 7.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.823529)

[node name="CDText" type="RichTextLabel" parent="Mask"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.784314)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/normal_font_size = 28
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CDTimer" type="Timer" parent="."]
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="CDTimer" to="." method="_on_cd_timer_timeout"]
